# Noti_project

./: README.md
backend/: pyproject.toml
backend/src/: manage.py
backend/src/noti/: admin.py  models.py  serializers.py  views.py
backend/src/noti_drf_proj/: asgi.py  settings.py  urls.py  wsgi.py
bot/: pyproject.toml
bot/src/: main.py
bot/src/bot_app/: app.py  config.py
bot/src/bot_app/backend/: controller.py  crud.py  db_api_requests.py  models.py
bot/src/bot_app/backend/db_api_jwt_manager/: db_api_jwt_requests.py  db_api_requests.py  jwt_manager.py
bot/src/bot_app/cache/: redis_cache.py
bot/src/bot_app/keyboards/inline_keyboards/: root_menu_inline_kb.py
bot/src/bot_app/keyboards/reply_keyboards/: reg_kb.py
bot/src/bot_app/routers/: __init__.py  default_handler.py  reg_handler.py
bot/src/bot_app/routers/command_handlers/: __init__.py  api_handler.py  help_handler.py  start_handler.py
bot/src/bot_app/routers/root_menu/: __init__.py  root_menu_handler.py
bot/src/bot_app/states/: reg_states.py
bot/src/bot_app/utils/: common.py  main_menu.py  symbols_checker.py
