[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ilia Mediankin <i.mediankin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.5"
djangorestframework = "^3.15.2"
environs = "^14.1.1"
djangorestframework-simplejwt = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
