[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Ilia Mediankin <i.mediankin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.17.0"
environs = "^14.1.0"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
